# kingdom-chess

./: setup.cfg
chesspy/: __init__.py
kingdom_chess/: __init__.py
tests/: test_chesspy.py  test_kingdom_chess.py
